--- a/immobiliaris-be/pom.xml
+++ b/immobiliaris-be/pom.xml
@@ -82,6 +82,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <!-- SpringDoc OpenAPI UI -->
+    <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.2.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
