--- a/immobiliaris-be/src/main/resources/application.properties
+++ b/immobiliaris-be/src/main/resources/application.properties
@@ -28,5 +28,6 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger
 springdoc.swagger-ui.enabled=true
 
-# Ordina i metodi alfabeticamente
-springdoc.swagger-ui.operationsSorter=method
+# Ordina i controller e operazioni alfabeticamente
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
