Implement password hashing; add DataLoader for initial user setup

--- a/immobiliaris-be/src/main/resources/application.properties
+++ b/immobiliaris-be/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true 
+#ritarda l'inizializzazione del datasource fino a quando JPA non è pronto
 
 # H2
 spring.h2.console.enabled=true
@@ -17,7 +19,7 @@ spring.h2.console.path=/h2
 
 # SQL
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+# spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data-test.sql
 
 # Server
