--- a/immobiliaris-be/pom.xml
+++ b/immobiliaris-be/pom.xml
@@ -90,10 +90,16 @@
         <version>2.2.0</version>
     </dependency>
 
-     <!-- Spring Security -->
+    <!-- Spring Security -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <!-- Validation -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
     <!-- JWT -->
