Refactor generale della documentazione con aggiunta di alcuni file utili a spiegare il flusso di alcuni processi. Aggiunto il file .bat per l'avvio della console h2. Aggiunta la persistenza dei dati e cambiato le application properties per corretto funzionamento. Refactor in ValutazioneAutomaticaService per ripetizione di codice. Aggiornato gitignore per la cartella data/ così da non pushare anche quella su github.

--- a/immobiliaris-be/.gitignore
+++ b/immobiliaris-be/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Database persistence ###
+data/*.db
+data/*.trace.db
+
 ### STS ###
 .apt_generated
 .classpath
