--- a/immobiliaris-be/src/main/resources/application.properties
+++ b/immobiliaris-be/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DATABASE
-spring.datasource.url=jdbc:h2:mem:ImmobiliarisDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-# spring.datasource.url=jdbc:h2:file:./data/immobiliarisDB
+# spring.datasource.url=jdbc:h2:mem:ImmobiliarisDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:./data/immobiliarisDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -18,9 +18,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # SQL
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 # spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=classpath:data-test.sql
+# spring.sql.init.data-locations=classpath:data-test.sql
 
 # Server
 server.port=8080
